# dotfiles

./: README.md  Xresources  bashrc  c.snippets  commands.md  signature  vimrc
EPITA/adrien.josse-42sh/: CMakeLists.txt  README  TODO
EPITA/adrien.josse-42sh/doc/: Doxyfile
EPITA/adrien.josse-42sh/src/: 42sh.c  CMakeLists.txt
EPITA/adrien.josse-42sh/src/ast/: CMakeLists.txt  ast_case.c  ast_case.h  ast_command.c  ast_command.h  ast_compound_list.c  ast_compound_list.h  ast_funcdec.c  ast_funcdec.h  ast_if.c  ast_if.h  ast_input.c  ast_input.h  ast_loops.c  ast_loops.h  ast_redirection.c  ast_redirection.h  ast_utils.c  ast_utils.h
EPITA/adrien.josse-42sh/src/built-in/: CMakeLists.txt  alias.c  alias.h  break.c  break.h  built_in.c  built_in.h  built_in_alias.c  built_in_alias.h  cd.c  cd.h  continue.c  continue.h  echo.c  echo.h  exit.c  exit.h  export.c  export.h  set.c  set.h  source.c  source.h
EPITA/adrien.josse-42sh/src/exec/: CMakeLists.txt  exec_case.c  exec_case.h  exec_command.c  exec_command.h  exec_compound_list.c  exec_compound_list.h  exec_funcdec.c  exec_funcdec.h  exec_if.c  exec_if.h  exec_input.c  exec_input.h  exec_loops.c  exec_loops.h  exec_redirection.c  exec_redirection.h  exec_redirection_bis.c  exec_simple_command.c  exec_simple_command.h  main_utils.c  main_utils.h
EPITA/adrien.josse-42sh/src/expand/: CMakeLists.txt  expand.c  expand.h  expand_arithmetic.c  expand_arithmetic.h  expand_arithmetic_exec.c  expand_arithmetic_exec.h  expand_arithmetic_free.c  expand_arithmetic_free.h  expand_arithmetic_free_2.c  expand_arithmetic_free_2.h  expand_arithmetic_lexer.c  expand_arithmetic_lexer.h  expand_arithmetic_parser.c  expand_arithmetic_parser.h  expand_command.c  expand_command.h  expand_parameters.c  expand_parameters.h  expand_path.c  expand_path.h  expand_tildes.c  expand_tildes.h  expand_utils.c  expand_utils.h  variables.c  variables.h
EPITA/adrien.josse-42sh/src/free/: CMakeLists.txt  case_free.c  case_free.h  command_free.c  command_free.h  compound_list_free.c  compound_list_free.h  funcdec_free.c  funcdec_free.h  if_free.c  if_free.h  loops_free.c  loops_free.h  parser_input_free.c  parser_input_free.h  redirection_free.c  redirection_free.h  simple_command_free.c  simple_command_free.h
EPITA/adrien.josse-42sh/src/history/: CMakeLists.txt  history.c  history.h
EPITA/adrien.josse-42sh/src/input/: CMakeLists.txt  env.c  env.h  input.c  input.h  option.c  option.h  readline.c  readline.h
EPITA/adrien.josse-42sh/src/lexer/: CMakeLists.txt  lexer.c  lexer.h  quote_len.c  quote_len.h  split.c  split.h  token.c  token.h
EPITA/adrien.josse-42sh/src/parser/: CMakeLists.txt  case.c  case.h  command.c  command.h  compound_list.c  compound_list.h  funcdec.c  funcdec.h  if.c  if.h  loops.c  loops.h  parser_input.c  parser_input.h  redirection.c  redirection.h  simple_command.c  simple_command.h  utils.c  utils.h
EPITA/adrien.josse-42sh/src/utils/: CMakeLists.txt  fd_utils.c  fd_utils.h  memory.c  memory.h  xstring.c  xstring.h
EPITA/adrien.josse-42sh/tests/: CMakeLists.txt  ast_test.c
EPITA/adrien.josse-42sh/tests/exec/: CMakeLists.txt  exec_command_test.c  exec_simple_command_test.c
EPITA/adrien.josse-42sh/tests/expand/: CMakeLists.txt  expand_parameters_test.c  expand_tildes_test.c  expand_utils_test.c  variables_test.c
EPITA/adrien.josse-42sh/tests/input/: CMakeLists.txt  option_test.c  readline_test.c
EPITA/adrien.josse-42sh/tests/lexer/: CMakeLists.txt  lexer_test.c  split_test.c  token_test.c
EPITA/adrien.josse-42sh/tests/parser/: CMakeLists.txt  case_test.c  command_test.c  compound_list_test.c  funcdec_test.c  if_test.c  loops_test.c  parser_input_test.c  redirection_test.c  simple_command_test.c
EPITA/adrien.josse-42sh/tests/python/: builtins_tests.yml  case_tests.yml  expand_tests.yml  funcdec_tests.yml  if_tests.yml  loops_tests.yml  pipe_tests.yml  redirections_tests.yml  requirements.txt  setup_env.sh  test_suite.py  tests.yml
EPITA/adrien.josse-chess/: CMakeLists.txt
EPITA/adrien.josse-chess/debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
EPITA/adrien.josse-chess/debug/Testing/Temporary/: CTestCostData.txt
EPITA/adrien.josse-chess/debug/src/: Makefile  cmake_install.cmake
EPITA/adrien.josse-chess/debug/tests/: Makefile  cmake_install.cmake
EPITA/adrien.josse-chess/release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
EPITA/adrien.josse-chess/release/src/: Makefile  cmake_install.cmake
EPITA/adrien.josse-chess/release/tests/: Makefile  cmake_install.cmake
EPITA/adrien.josse-chess/src/: CMakeLists.txt  main.cc
EPITA/adrien.josse-chess/src/chess_engine/ai/: ai.cc  ai.hh  minimax.cc  minimax.hh  uci.cc  uci.hh
EPITA/adrien.josse-chess/src/chess_engine/board/: chessboard-representation.cc  chessboard-representation.hh  chessboard.cc  chessboard.hh  move.hh  piece-type.hh  rule.cc  rule.hh  utils.cc  utils.hh
EPITA/adrien.josse-chess/src/chess_engine/perft/: perft_engine.cc  perft_engine.hh
EPITA/adrien.josse-chess/src/listener/: cli-listener.cc  cli-listener.hh  listener.hh  listener_manager.cc  listener_manager.hh
EPITA/adrien.josse-chess/src/parsing/option_parser/: option_parser.cc  option_parser.hh
EPITA/adrien.josse-chess/src/parsing/perft_parser/: fen_object.cc  fen_object.hh  fen_rank.cc  fen_rank.hh  perft_object.cc  perft_object.hh  perft_parser.cc  perft_parser.hh
EPITA/adrien.josse-chess/src/parsing/pgn_parser/: pgn-move.hh  pgn-parser.cc
EPITA/adrien.josse-chess/src/utils/: logger.cc  logger.hh
EPITA/adrien.josse-chess/tests/: CMakeLists.txt  debug_fen  pgn_tests.sh
EPITA/adrien.josse-chess/tests/chess_engine/board/: test_castling.cc  test_chessboard-representation.cc  test_chessboard.cc  test_eval.cc  test_legal_crusade.cc  test_legal_moves.cc  test_rules.cc
EPITA/adrien.josse-chess/tests/custom_perft/: test1.perft  test2.perft
EPITA/adrien.josse-chess/tests/parsing/option_parser/: test_option_parser.cc
EPITA/adrien.josse-chess/tests/parsing/perft_parser/: test_fen_object.cc  test_fen_rank.cc  test_perft_parser.cc
(+7 files in other folders)
