add_library(src STATIC
  chess_engine/ai/uci.cc
  chess_engine/ai/uci.hh
  chess_engine/ai/ai.cc
  chess_engine/ai/ai.hh
  chess_engine/ai/minimax.cc
  chess_engine/ai/minimax.hh
  chess_engine/board/chessboard.cc
  chess_engine/board/chessboard.hh
  chess_engine/board/chessboard-interface.hh
  chess_engine/board/chessboard-representation.cc
  chess_engine/board/chessboard-representation.hh
  chess_engine/board/color.hh
  chess_engine/board/move.hh
  chess_engine/board/piece-type.hh
  chess_engine/board/position.hh
  chess_engine/board/position.hxx
  chess_engine/board/rule.cc
  chess_engine/board/rule.hh
  chess_engine/board/utils.cc
  chess_engine/board/utils.hh
  chess_engine/perft/perft_engine.cc
  chess_engine/perft/perft_engine.hh
  listener/listener.hh
  listener/listener_manager.hh
  listener/listener_manager.cc
  parsing/option_parser/option_parser.cc
  parsing/option_parser/option_parser.hh
  parsing/pgn_parser/pgn-exception.cc
  parsing/pgn_parser/pgn-exception.hh
  parsing/pgn_parser/pgn-move.cc
  parsing/pgn_parser/pgn-move.hh
  parsing/pgn_parser/pgn-parser.cc
  parsing/pgn_parser/pgn-parser.hh
  parsing/pgn_parser/report-type.hh
  parsing/perft_parser/fen_rank.cc
  parsing/perft_parser/fen_rank.hh
  parsing/perft_parser/fen_object.cc
  parsing/perft_parser/fen_object.hh
  parsing/perft_parser/perft_object.cc
  parsing/perft_parser/perft_object.hh
  parsing/perft_parser/perft_parser.cc
  parsing/perft_parser/perft_parser.hh
  utils/logger.cc
  utils/logger.hh
  utils/utype.hh)

target_link_directories(src PRIVATE ${LIBRARIES})
